# rust-svg-converter

./: . dockerignore  .architect-role.md  .dockerignore  .env  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Gemfile  LICENSE  README.md  docker-env
.claude/skills/afx/: SKILL.md
.claude/skills/codev/: SKILL.md
.claude/skills/consult/: SKILL.md
.claude/skills/generate-image/: SKILL.md
.claude/skills/porch/: SKILL.md
.github/workflows/: svg_convert_rust.yml
codev/plans/: 1-baseline-architecture.md
codev/specs/: 1-baseline-architecture.md
react-ui/: package.json  vite.config.ts
react-ui/src/: App.js  App.test.jsx  index.js  setupProxy.js  setupTests.ts
react-ui/src/component/: ErrorBoundary.jsx  ImageDropZone.js  MainNavBar.js  MainNavBar.jsx  MainView.js  SVGConvertExamples.js  SVGConverter.js  SVGConverter.jsx  SVGConverter.tsx  SVGHistory.js
react-ui/src/hooks/: useImageDropZone.jsx
svg-converter/: Cargo.toml
svg-converter/src/: lib.rs  svg_converter.rs  svg_converter_utils.rs
svg-converter/src/domain/: error.rs  image_array.rs  image_convert_options.rs  image_data.rs  image_interpolation.rs  image_path_trace.rs  image_paths.rs  mod.rs  svg_conversion_ctx.rs
svg-converter/src/operation/: batch_interpolation.rs  color_quantization.rs  generate_layer_edge_detection.rs  generate_palette_quantization.rs  generate_paths.rs  generate_svg_string.rs  image_path_tracing.rs  mod.rs  palette_generation.rs
svg-converter/src/utils/: mod.rs  operation_manager.rs  operation_progress_listener.rs
svg-web-service/: Cargo.toml
svg-web-service/src/: lib.rs  main.rs
svg-web-service/src/config/: mod.rs
svg-web-service/src/web_handler/: health.rs  index.rs  mod.rs  svg_conversion.rs
svg-web-service/tests/: health_check_test.rs
svg-web-service/tests/bdd/: config_bdd.yml
svg-web-service/tests/bdd/features/: testcase_application_status.feature  testcase_svg_image_convert.feature  testcase_svg_settings_api.feature
svg-web-service/tests/bdd/features/step_definitions/: steps.rb  steps_utils.rb
svg-web-service/tests/bdd/features/support/: env.rb
