# Copyright (c) 2020 Nam Seob Seo
# 
# This software is released under the MIT License.
# https://opensource.org/licenses/MIT

[package]
name = "svg-converter"
version = "0.2.0"
authors = ["Nam Seob Seo <nsclass@gmail.com>"]
edition = "2021"

[dependencies]
image = "0.24"
image-base64 = "0.1"
ndarray = "0.15"
rand = "0.8"
thiserror = "1"
exoquant = "0.2"
rayon = "1"