# Copyright (c) 2020 Nam Seob Seo
# 
# This software is released under the MIT License.
# https://opensource.org/licenses/MIT

[package]
name = "svg-converter"
version = "0.2.0"
authors = ["Nam Seob Seo <nsclass@gmail.com>"]
edition = "2021"

[dependencies]
base64 = "0.22"
image = "0.25"
ndarray = "0.16"
rand = "0.9"
thiserror = "2"
exoquant = "0.2"
rayon = "1"
