# Copyright (c) 2020 Nam Seob Seo
# 
# This software is released under the MIT License.
# https://opensource.org/licenses/MIT

[package]
name = "svg-web-service"
version = "0.2.0"
authors = ["Nam Seob Seo"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "svg-web-service"

[dependencies]
svg-converter = { path = "../svg-converter" }

actix-web = "4.0.0-beta.15"
actix-files = "0.6.0-beta.10"
config = "0.11"
dotenv = "0.15"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
bytes = { version = "1", features = ["serde"] }

eyre = "0.6"
color-eyre = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2"
tracing-actix-web = "0.5.0-beta.6"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
assert-json-diff = "2"
