# Copyright (c) 2020 Nam Seob Seo
# 
# This software is released under the MIT License.
# https://opensource.org/licenses/MIT

[package]
name = "svg-web-service"
version = "0.2.0"
authors = ["Nam Seob Seo"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "svg-web-service"

[dependencies]
svg-converter = { path = "../svg-converter" }

actix-web = "4"
actix-files = "0.6"
config = "0.14"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
bytes = { version = "1", features = ["serde"] }

eyre = "0.6"
color-eyre = "0.6"
env_logger = "0.11"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.7"

[dev-dependencies]
reqwest = { version = "^0.11", features = ["json"] }
assert-json-diff = "^2"
